task-manager-kubernetes/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-back
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager-back
  template:
    metadata:
      labels:
        app: task-manager-back
    spec:
      serviceAccountName: back-sa
      containers:
        - name: task-manager-back
          image: dehmanim/task-manager-back:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
