task-manager-kubernetes/back-user-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-back-user
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager-back-user
  template:
    metadata:
      labels:
        app: task-manager-back-user
    spec:
      serviceAccountName: back-user-sa
      containers:
        - name: task-manager-back-user
          image: dehmanim/task-manager-back-user:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
