task-manager-kubernetes/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-back-service
  namespace: task-manager
spec:
  type: ClusterIP
  selector:
    app: task-manager-back
  ports:
    - port: 3000
      targetPort: 3000
