task-manager-kubernetes/back-user-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-back-user-service
  namespace: task-manager
spec:
  type: ClusterIP
  selector:
    app: task-manager-back-user
  ports:
    - port: 3000
      targetPort: 3000
