task-manager-kubernetes/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-front-service
  namespace: task-manager
spec:
  type: ClusterIP
  selector:
    app: task-manager-front
  ports:
    - port: 80
      targetPort: 80
