task-manager-kubernetes/mysql-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: task-manager-mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: task-manager-mysql
spec:
  serviceName: task-manager-mysql
  replicas: 1
  selector:
    matchLabels:
      app: task-manager-mysql
  template:
    metadata:
      labels:
        app: task-manager-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-init
          configMap:
            name: task-manager-mysql-init
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
