task-manager-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: task-manager
spec:
  ingressClassName: nginx
  rules:
    - host: taskmanager.local
      http:
        paths:

          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: task-manager-back-service
                port:
                  number: 3000

          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: task-manager-back-user-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-front-service
                port:
                  number: 80
